<resources>
    <string name="app_name">CST_2335_Mobile_Final_Project</string>


    <string name="searchbar" >Search</string>
    <string name="wordnameview" />
    <string name="worddefinitionview" />
    <string name="pronunciationview" />
    <string name="word_name_goes_here">Word name goes here</string>
    <string name="pronunciation_goes_here">pronunciation goes here</string>
    <string name="definition_goes_here">definition goes here</string>
    <string name="add">ADD</string>
    <string name="close">CLOSE</string>
    <string name="delete">DELETE</string>
    <string name="search">search</string>
    <string name="owlbot_dictionary">owlbot_dictionary</string>
    <string name="search_your_word">Search your word</string>
    <string name="type_your_word">Type your word</string>
    <string name="favouritesword">FAVOURITESWORD</string>
    <string name="author_ning_qin">Author: Ning Qin</string>

    <string name="help">HELP</string>
    <string name="open" >open</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="version_4_0" >Version: 4.0</string>
    <string name="version_3_0">Version: 4.0</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="Search">Search</string>


    <string name="hint">Please enter the content</string>
    <string name="OwlbotDicionary">Owlbot Dicionary</string>
    <string name="Pexels">Pexels</string>
    <string name="CovidTracker">Covid 19 Tracker</string>

    <string name="SaveList">SaveList</string>
    <string name="author_and_version">Pexels by Yingying Zhao \nVersion 1.0</string>
    <string name="des">Get to the corresponding image through the input text Author: Yingying Zhao , App name: Pexels</string>
    <string name="tips">tips</string>


</resources>