<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/wordnameview"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/wordnameview"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/worddefinitionview"
        android:layout_width="327dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/worddefinitionview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordnameview" />

    <TextView
        android:id="@+id/pronunciationview"
        android:layout_width="98dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/pronunciationview"
        app:layout_constraintStart_toEndOf="@+id/wordnameview"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>